...
    <LinearLayout
        android:id="@+id/btnAddFoodListContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/space_32dp"
        app:layout_constraintBottom_toTopOf="@id/rvFoodList"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddFoodList"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_35dp"
            android:layout_marginEnd="@dimen/space_09dp"
            android:background="@drawable/rounded_corner_green_button"
            android:drawableStart="@drawable/icon_fork_spoon"
            android:fontFamily="@font/font_zen_maru_gothic"
...
            android:src="@drawable/myna_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPercentageToggle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_35dp"
            android:background="@drawable/rounded_corner_green_button"
            android:drawableEnd="@drawable/baseline_keyboard_double_arrow_down_24"
            android:fontFamily="@font/font_zen_maru_gothic"
            android:paddingHorizontal="@dimen/space_08dp"
...
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_zen_maru_gothic"
                android:text="@string/service_charge"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/etServiceChargeAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etServiceChargeAmount" />

            <com.teerapat.moneydivider.widget.ThousandSeparatedEditText
                android:id="@+id/etServiceChargeAmount"
                android:layout_width="wrap_content"
...
                android:fontFamily="@font/font_zen_maru_gothic"
                android:hint="@string/zero_amount"
                android:inputType="numberDecimal"
                android:textColor="@color/colorGreen066E38"
                android:textColorHint="@color/colorGreen066E38"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintEnd_toStartOf="@id/tvServiceChargePercentage"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/tvServiceChargePercentage"
                android:layout_width="wrap_content"
...
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_zen_maru_gothic"
                android:text="@string/vat"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/etVatAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etVatAmount" />

            <com.teerapat.moneydivider.widget.ThousandSeparatedEditText
                android:id="@+id/etVatAmount"
                android:layout_width="wrap_content"
...
                android:fontFamily="@font/font_zen_maru_gothic"
                android:hint="@string/zero_amount"
                android:inputType="numberDecimal"
                android:textColor="@color/colorGreen066E38"
                android:textColorHint="@color/colorGreen066E38"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintEnd_toStartOf="@id/tvVatPercentage"
                app:layout_constraintTop_toBottomOf="@id/etServiceChargeAmount"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/tvVatPercentage"
                android:layout_width="wrap_content"
...
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_zen_maru_gothic"
                android:text="@string/discount"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/etDiscountAmount"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/etDiscountAmount" />

            <com.teerapat.moneydivider.widget.ThousandSeparatedEditText
                android:id="@+id/etDiscountAmount"
                android:layout_width="wrap_content"
...
                android:fontFamily="@font/font_zen_maru_gothic"
                android:hint="@string/zero_amount"
                android:inputType="numberDecimal"
                android:textColor="@color/colorGreen066E38"
                android:textColorHint="@color/colorGreen066E38"
                android:textSize="@dimen/text_size_14sp"
                app:layout_constraintEnd_toStartOf="@id/tvDiscountPercentage"
                app:layout_constraintTop_toBottomOf="@id/etVatAmount"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/tvDiscountPercentage"
                android:layout_width="wrap_content"
...
            android:layout_height="wrap_content"
            android:fontFamily="@font/font_zen_maru_gothic"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/btnNext"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_35dp"
...
