...
        android:layout_marginStart="@dimen/space_32dp"
        android:layout_marginTop="@dimen/space_12dp"
        android:layout_marginEnd="@dimen/space_10dp"
        android:layout_marginBottom="@dimen/space_06dp"
        app:cardCornerRadius="@dimen/space_05dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivDeleteFoodList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_13dp">

            <EditText
                android:id="@+id/etFoodList"
                android:layout_width="@dimen/space_120dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorGreen82B79C"
                android:ellipsize="end"
                android:focusable="true"
                android:focusableInTouchMode="true"
...
                android:textSize="@dimen/text_size_18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="Autofill,LabelFor" />

            <com.teerapat.moneydivider.widget.ThousandSeparatedEditText
                android:id="@+id/etFoodPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorGreen82B79C"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fontFamily="@font/font_zen_maru_gothic"
                android:hint="@string/price_text"
                android:inputType="numberDecimal"
                android:labelFor="@id/etFoodPrice"
                android:textColor="@color/colorGreen066E38"
                android:textColorHint="@color/colorGreen82B79C"
                android:textSize="@dimen/text_size_18sp"
                app:layout_constraintEnd_toStartOf="@id/tvPersonPerFoodCard"
                app:layout_constraintTop_toTopOf="@id/etFoodList"
                tools:ignore="Autofill,LabelFor" />

            <TextView
                android:id="@+id/tvPersonPerFoodCard"
                android:layout_width="wrap_content"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/etFoodPrice"
                tools:text="@string/max_amount_person"
                tools:visibility="visible" />

            <ImageView
                android:id="@+id/ivAddNameList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/large_padding"
                android:src="@drawable/add_name_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/vSpacing1"
                app:layout_constraintStart_toEndOf="@id/ivAddNameList"
                app:layout_constraintTop_toBottomOf="@id/etFoodList">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/nameChipContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true">

                    <com.google.android.material.chip.Chip
                        android:layout_width="wrap_content"
...
