...
        android:layout_marginStart="@dimen/space_32dp"
        android:layout_marginTop="@dimen/space_12dp"
        android:layout_marginEnd="@dimen/space_10dp"
        android:layout_marginBottom="@dimen/space_06dp"
        app:cardCornerRadius="@dimen/space_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivDeleteNameList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etNameList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorGreen82B79C"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/font_zen_maru_gothic"
...
